fix animation bug on safari & fix pinky theme

--- a/css/main.css
+++ b/css/main.css
@@ -589,25 +589,31 @@ body,
 
     /* transform: scale(9); */
     /* transition: transform 2s ease-out 100ms; */
+    /* opacity: 0.2; */
+    /* transition: opacity 5s ease; */
 }
 
 @keyframes scaleBounce {
     0% {
         transform: scale(0.8);
+        /* opacity: 0.2; */
     }
 
     50% {
         transform: scale(1.2);
+        /* opacity: 0.6; */
     }
 
     100% {
         transform: scale(1);
+        /* opacity: 1; */
     }
 }
 
 #sectHome.active h1 {
     /* transform: scale(1); */
-    animation: scaleBounce 2s ease-out 100ms;
+    /* animation: scaleBounce 2s ease-out 100ms; */
+    opacity: 1;
 }
 
 /*
